# finetunning_lora

./: README.md  finetunning.ipynb  image_classification_peft_lora.ipynb  main.py  pyproject.toml  requirements.txt  tokenizer.ipynb
content/pharma_processed_data/: pdf_pages_cleaned.jsonl
content/pharma_tinyllama_lora_adapter/: adapter_config.json
content/pharma_tinyllama_lora_output/checkpoint-10/: rng_state.pth  scheduler.pt  trainer_state.json
finetuning/: __init__.py  config.py  dataset_builder.py  inference.py  model_manager.py  pdf_processor.py
