[project]
name = "finetunning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=5.0.0",
    "ipykernel>=7.2.0",
    "peft>=0.19.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "torchao>=0.17.0",
    "transformers>=5.10.2",
]
